# mcp-server-time

./: README.md  pyproject.toml
src/mcp_server_time/: server.py
